--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
-.text {
-    background-image: url(https://i.pinimg.com/1200x/fb/f6/e6/fbf6e6732ca522fe7c6e6200da390ec3.jpg);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    background-size: 30px;
-    background-size: cover;
-}
 
-h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 100px;
-}
 
-body {
-    background-color: black;
-}
+/* Mobile First Media Queries */
+/* smallest*/
+@media (min-width: 475px) {} 
+
+/* small */
+@media (min-width: 640px) {} 
+
+/* medium */
+@media (min-width: 768px) {} 
+
+/* large */
+@media (min-width: 1024px) {} 
+
+/* extra large */
+@media (min-width: 1280px) {}
+
+/* larges */
+@media (min-width: 1536px) {}
