--- a/style.css
+++ b/style.css
@@ -2,19 +2,33 @@
 
 /* Mobile First Media Queries */
 /* smallest*/
-@media (min-width: 475px) {} 
+@media (min-width: 475px) {
+
+
+} 
 
 /* small */
-@media (min-width: 640px) {} 
+@media (min-width: 640px) {
+
+
+} 
 
 /* medium */
-@media (min-width: 768px) {} 
+@media (min-width: 768px) {
+
+} 
 
 /* large */
-@media (min-width: 1024px) {} 
+@media (min-width: 1024px) {
+
+} 
 
 /* extra large */
-@media (min-width: 1280px) {}
+@media (min-width: 1280px) {
+
+}
 
 /* larges */
-@media (min-width: 1536px) {}
+@media (min-width: 1536px) {
+    
+}
